force-app/main/default/objects/Flight_Info__c/Flight_Info__c.object-meta.xml
<CustomObject>
    <label>Flight Info</label>
    <nameField>
        <displayFormat>FI-{00000}</displayFormat>
        <label>Flight Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>