force-app/main/default/objects/Flight_Info__c/fields/Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft</label>
    <referenceTo>Aircraft__c</referenceTo>
    <relationshipLabel>Flight Info</relationshipLabel>
    <relationshipName>Flight_Info</relationshipName>
    <type>Lookup</type>
</CustomField>