force-app/main/default/objects/Flight_Info__c/fields/Date_time_of_Flight__c.field-meta.xml
<CustomField>
    <fullName>Date_time_of_Flight__c</fullName>
    <label>Date time of Flight</label>
    <type>DateTime</type>
</CustomField>