force-app/main/default/objects/Flight_Info__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <label>Departure</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>