force-app/main/default/objects/Flight_Info__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>