force-app/main/default/objects/Flight_Info__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Time</type>
</CustomField>